--- a/download/05-perceptron/perceptron.ipynb
+++ b/download/05-perceptron/perceptron.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Perceptron():\n",
@@ -29,8 +27,8 @@
     "        \n",
     "        self.w=defaultdict(lambda:0.0)\n",
     "        self.phi=defaultdict(lambda:0)\n",
-    "        lines=[]\n",
-    "        ys=[]\n",
+    "        self.lines=[]\n",
+    "        self.ys=[]\n",
     "        \n",
     "        if input_f:\n",
     "            with open(input_f,\"r\",encoding=\"utf-8\") as f:\n",
@@ -38,25 +36,29 @@
     "                    class_,line=line_.split(\"\\t\")\n",
     "                    for i in line.split():\n",
     "                        self.phi[i]+=1\n",
-    "                    lines.append(line)\n",
-    "                    ys.append(int(class_))\n",
+    "                    self.lines.append(line)\n",
+    "                    self.ys.append(int(class_))\n",
     "            for i in self.phi:\n",
     "                self.w[i]=0\n",
     "            \n",
     "            # train the data 10 iters on all the lines\n",
     "            self.model_flag=True\n",
-    "            self.train_model(100,lines,ys)\n",
+    "            self.train_model(10)\n",
     "        else:\n",
     "            self.model_flag=False\n",
     "    \n",
+    "        \n",
     "    def gen_phi(self,line):\n",
     "        output=defaultdict(lambda:0)\n",
     "        for i in line.split():\n",
     "            output[i]+=1\n",
     "        return output\n",
     "    \n",
-    "    def train_model(self,n_iter,lines,ys):\n",
+    "    def train_model(self,n_iter,lines=None,ys=None):\n",
     "        \"\"\"train model for several more iterations if the model is loaded\"\"\"\n",
+    "        if not lines and not ys:\n",
+    "            lines=self.lines\n",
+    "            ys=self.ys\n",
     "        if self.model_flag:\n",
     "            for i in range(n_iter):\n",
     "                for line,y in zip(lines,ys):\n",
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -147,17 +149,17 @@
       "-1\n",
       "1\n",
       "1\n",
-      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
       "-1\n",
-      "1\n",
       "-1\n",
       "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -174,7 +176,7 @@
       "1\n",
       "-1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -328,7 +330,7 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -413,7 +415,7 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -434,7 +436,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -484,12 +486,12 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
-      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
+      "-1\n",
       "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -608,10 +610,10 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "-1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -649,11 +651,11 @@
       "-1\n",
       "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
       "-1\n",
-      "1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -663,7 +665,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -755,7 +757,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -771,7 +773,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -788,7 +790,7 @@
       "1\n",
       "-1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -889,8 +891,8 @@
       "1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -943,9 +945,9 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
       "1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -960,7 +962,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -990,8 +992,8 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "1\n",
       "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "1\n",
@@ -1011,10 +1013,10 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
-      "-1\n",
+      "1\n",
       "1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -1022,8 +1024,8 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -1049,14 +1051,14 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
-      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
+      "-1\n",
       "-1\n",
       "-1\n",
       "-1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -1151,7 +1153,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "1\n",
       "1\n",
       "-1\n",
@@ -1176,13 +1178,13 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -1199,7 +1201,7 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "1\n",
       "1\n",
       "-1\n",
@@ -1284,7 +1286,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -1293,7 +1295,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -1365,7 +1367,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -1387,7 +1389,7 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -1450,8 +1452,8 @@
       "1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -1475,7 +1477,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -1663,7 +1665,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -1674,7 +1676,7 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "1\n",
@@ -1690,11 +1692,11 @@
       "1\n",
       "1\n",
       "-1\n",
-      "1\n",
       "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "-1\n",
@@ -1707,7 +1709,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -1728,9 +1730,9 @@
       "1\n",
       "1\n",
       "1\n",
-      "-1\n",
       "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -1806,10 +1808,10 @@
       "1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "-1\n",
       "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -1818,10 +1820,10 @@
       "1\n",
       "1\n",
       "-1\n",
-      "1\n",
       "1\n",
       "1\n",
       "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -1904,7 +1906,7 @@
       "1\n",
       "-1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -1920,7 +1922,7 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "1\n",
       "-1\n",
       "-1\n",
@@ -1967,7 +1969,7 @@
       "1\n",
       "1\n",
       "-1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -1991,7 +1993,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -2009,7 +2011,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -2018,7 +2020,7 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -2052,7 +2054,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -2097,7 +2099,7 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -2129,7 +2131,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -2140,7 +2142,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "1\n",
@@ -2192,8 +2194,8 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "1\n",
       "-1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -2353,7 +2355,7 @@
       "-1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -2399,7 +2401,7 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "-1\n",
@@ -2505,9 +2507,9 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "1\n",
       "1\n",
       "-1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "-1\n",
@@ -2548,8 +2550,8 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -2574,8 +2576,8 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -2611,9 +2613,9 @@
       "-1\n",
       "1\n",
       "1\n",
-      "-1\n",
       "-1\n",
       "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -2636,7 +2638,7 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "1\n",
       "1\n",
@@ -2678,7 +2680,7 @@
       "-1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "-1\n",
@@ -2704,7 +2706,7 @@
       "1\n",
       "1\n",
       "1\n",
-      "1\n",
+      "-1\n",
       "1\n",
       "-1\n",
       "1\n",
@@ -2740,7 +2742,7 @@
       "1\n",
       "1\n",
       "-1\n",
-      "1\n",
+      "-1\n",
       "-1\n",
       "1\n",
       "-1\n",
@@ -2885,10 +2887,10 @@
       "1\n",
       "-1\n",
       "-1\n",
-      "-1\n",
-      "1\n",
       "1\n",
-      "1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -2926,7 +2928,7 @@
       "1\n",
       "-1\n",
       "1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
       "-1\n",
       "1\n",
@@ -2964,26 +2966,38 @@
       "-1\n",
       "1\n",
       "-1\n",
-      "-1\n",
-      "-1\n",
+      "1\n",
       "-1\n",
-      "\n"
+      "-1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "percep.predict(\"./../../data/titles-en-test.word\")\n",
-    "input()"
+    "percep.train_model(10)\n",
+    "percep.predict(\"data/titles-en-test.word1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command 'python ./script/grade-prediction.py ./data/titles-en-test.word1 ./data/titles-en-test.word1_classification' returned non-zero exit status 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-376f2ee9b2be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"python ./script/grade-prediction.py ./data/titles-en-test.word1 ./data/titles-en-test.word1_classification\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mshell\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/subprocess.py\u001b[0m in \u001b[0;36mcheck_output\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    627\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m     return run(*popenargs, stdout=PIPE, timeout=timeout, check=True,\n\u001b[0;32m--> 629\u001b[0;31m                **kwargs).stdout\n\u001b[0m\u001b[1;32m    630\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    631\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    709\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    710\u001b[0m             raise CalledProcessError(retcode, process.args,\n\u001b[0;32m--> 711\u001b[0;31m                                      output=stdout, stderr=stderr)\n\u001b[0m\u001b[1;32m    712\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mCompletedProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    713\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'python ./script/grade-prediction.py ./data/titles-en-test.word1 ./data/titles-en-test.word1_classification' returned non-zero exit status 1"
+     ]
+    }
+   ],
+   "source": [
+    "print(subprocess.check_output(\"python ./script/grade-prediction.py ./data/titles-en-test.word1 ./data/titles-en-test.word1_classification\",shell=True))"
    ]
   },
   {
